--- a/.github/workflows/ci-tests.yaml
+++ b/.github/workflows/ci-tests.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     env:
       OS: ${{ matrix.os }}
       PYTHON: '3.8'
@@ -28,6 +28,6 @@ jobs:
       uses: actions/upload-artifact@v2
       if: ${{ always()}}
       with:
-        name: ciclemaker-reports-${{ github.sha }}
+        name: ciclemaker-${{ matrix.os }}-reports-${{ github.sha }}
         path: |
             _autogen/**
